--- a/links-and-images/index.html
+++ b/links-and-images/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Links & Images</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Homepage</h1>
